--- a/deploy.yml
+++ b/deploy.yml
@@ -21,4 +21,4 @@
     - service: name=firewalld state=restarted
       when: ansible_distribution_major_version>=7
     - yum: name=katello
-    - command: /usr/sbin/katello-installer --no-colors -v -l error --foreman-admin-username={{satellite_admin_username}} --foreman-admin-password={{satellite_admin_password}}
+    - command: /usr/sbin/katello-installer --no-colors -v -l error --foreman-admin-username="{{satellite_admin_username}}" --foreman-admin-password="{{satellite_admin_password}}" --foreman-initial-location="{{satellite_location}}" --foreman-initial-organization="{{satellite_organization}}"
