--- a/vars.yml
+++ b/vars.yml
@@ -14,8 +14,8 @@ satellite_version: '6.1'
 satellite_admin_username: admin
 satellite_admin_password: redhat
 
-satellite_organization: ACME
-satellite_location: Milkyway
+satellite_organization: Red Hat
+satellite_location: Zurich
 
 satellite_repos:
   - rhel-{{ansible_distribution_major_version}}-server-rpms
